@@ -41,7 +41,6 @@ import java.util.Collections;
 import java.util.Currency;
 import java.util.Date;
 import java.util.HashMap;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -119,16 +118,13 @@ class MongoDBDocumentManagerTest {
             softly.assertThat(entityRef).isPresent();
             softly.assertThat(entityRef)
                     .get()
-                    .satisfies(updatedEntity -> {
-                        softly.assertThat(updatedEntity.find("newField"))
-                                .as("newField must be present")
-                                .isPresent()
-                                .get()
-                                .extracting(Element::get)
-                                .as("newField value is not correct")
-                                .isEqualTo("10");
-
-                    });
+                    .satisfies(updatedEntity -> softly.assertThat(updatedEntity.find("newField"))
+                            .as("newField must be present")
+                            .isPresent()
+                            .get()
+                            .extracting(Element::get)
+                            .as("newField value is not correct")
+                            .isEqualTo("10"));
         });
     }
 
@@ -157,15 +153,13 @@ class MongoDBDocumentManagerTest {
                 softly.assertThat(entityRef2).isPresent();
                 softly.assertThat(entityRef2)
                         .get()
-                        .satisfies(e -> {
-                            softly.assertThat(e.find("newField"))
-                                    .as("newField must be present")
-                                    .isPresent()
-                                    .get()
-                                    .extracting(Element::get)
-                                    .as("newField value is not correct")
-                                    .isEqualTo(_id.get());
-                        });
+                        .satisfies(e -> softly.assertThat(e.find("newField"))
+                                .as("newField must be present")
+                                .isPresent()
+                                .get()
+                                .extracting(Element::get)
+                                .as("newField value is not correct")
+                                .isEqualTo(_id.get()));
             });
         }
 
@@ -245,7 +239,7 @@ class MongoDBDocumentManagerTest {
 
         List<CommunicationEntity> entitiesFound = entityManager.select(query).collect(Collectors.toList());
         assertEquals(2, entitiesFound.size());
-        assertThat(entitiesFound).isNotIn(entities.get(0));
+        assertThat(entitiesFound).isNotIn(entities.getFirst());
     }
 
     @Test
@@ -262,7 +256,7 @@ class MongoDBDocumentManagerTest {
 
         List<CommunicationEntity> entitiesFound = entityManager.select(query).collect(Collectors.toList());
         assertEquals(2, entitiesFound.size());
-        assertThat(entitiesFound).isNotIn(entities.get(0));
+        assertThat(entitiesFound).isNotIn(entities.getFirst());
     }
 
     @Test
@@ -280,7 +274,7 @@ class MongoDBDocumentManagerTest {
 
         List<CommunicationEntity> entitiesFound = entityManager.select(query).collect(Collectors.toList());
         assertEquals(1, entitiesFound.size());
-        assertThat(entitiesFound).contains(entities.get(0));
+        assertThat(entitiesFound).contains(entities.getFirst());
     }
 
     @Test
@@ -387,7 +381,7 @@ class MongoDBDocumentManagerTest {
 
         List<CommunicationEntity> entitiesFound = entityManager.select(query).collect(Collectors.toList());
         assertEquals(1, entitiesFound.size());
-        assertThat(entitiesFound).isNotIn(entities.get(0));
+        assertThat(entitiesFound).isNotIn(entities.getFirst());
 
         query = select().from(COLLECTION_NAME)
                 .where("age").gt(22)
@@ -415,7 +409,7 @@ class MongoDBDocumentManagerTest {
 
         List<CommunicationEntity> entitiesFound = entityManager.select(query).collect(Collectors.toList());
         assertEquals(1, entitiesFound.size());
-        assertThat(entitiesFound).isNotIn(entities.get(0));
+        assertThat(entitiesFound).isNotIn(entities.getFirst());
 
         query = select().from(COLLECTION_NAME)
                 .where("age").gt(22)
@@ -491,7 +485,7 @@ class MongoDBDocumentManagerTest {
         SelectQuery query = select("name").from(COLLECTION_NAME).build();
         List<CommunicationEntity> entities = entityManager.select(query).toList();
         assertFalse(entities.isEmpty());
-        final CommunicationEntity entity = entities.get(0);
+        final CommunicationEntity entity = entities.getFirst();
         assertEquals(2, entity.size());
         assertTrue(entity.find("name").isPresent());
         assertTrue(entity.find("_id").isPresent());
@@ -509,7 +503,7 @@ class MongoDBDocumentManagerTest {
                 .where("_id").eq(id.get())
                 .build();
 
-        CommunicationEntity entityFound = entityManager.select(query).toList().get(0);
+        CommunicationEntity entityFound = entityManager.select(query).toList().getFirst();
         Element subDocument = entityFound.find("phones").get();
         List<Element> documents = subDocument.get(new TypeReference<>() {
         });
@@ -538,7 +532,7 @@ class MongoDBDocumentManagerTest {
         SelectQuery query = select().from(COLLECTION_NAME)
                 .where(id.name()).eq(id.get())
                 .build();
-        var entityFound = entityManager.select(query).toList().get(0);
+        var entityFound = entityManager.select(query).toList().getFirst();
         var subDocument = entityFound.find("phones").get();
         List<Element> documents = subDocument.get(new TypeReference<>() {
         });
@@ -561,7 +555,7 @@ class MongoDBDocumentManagerTest {
                 .where("_id").eq(id).build()).toList();
 
         assertEquals(1, entities.size());
-        CommunicationEntity documentEntity = entities.get(0);
+        CommunicationEntity documentEntity = entities.getFirst();
         assertEquals(id, documentEntity.find("_id").get().get());
 
         assertArrayEquals(contents, (byte[]) documentEntity.find("contents").get().get());
@@ -585,7 +579,7 @@ class MongoDBDocumentManagerTest {
                 .where("_id").eq(id).build()).toList();
 
         assertEquals(1, entities.size());
-        CommunicationEntity documentEntity = entities.get(0);
+        CommunicationEntity documentEntity = entities.getFirst();
         assertEquals(id, documentEntity.find("_id").get().get());
         assertEquals(date, documentEntity.find("date").get().get(Date.class));
         assertEquals(now, documentEntity.find("date").get().get(LocalDate.class));
@@ -720,7 +714,7 @@ class MongoDBDocumentManagerTest {
             }
         }
 
-        var entityToUpdate = entities.get(0);
+        var entityToUpdate = entities.getFirst();
         var idField = entityToUpdate.find(MongoDBUtils.ID_FIELD).orElseThrow();
 
         UpdateCommand updateCommand = new UpdateCommand(entityToUpdate.name(),
@@ -766,7 +760,7 @@ class MongoDBDocumentManagerTest {
         var result = entityManager.select(query).toList();
         assertSoftly(softly -> {
             softly.assertThat(result).hasSize(1);
-            softly.assertThat(result.get(0).find("name").orElseThrow().get(String.class)).isEqualTo("Poliana");
+            softly.assertThat(result.getFirst().find("name").orElseThrow().get(String.class)).isEqualTo("Poliana");
         });
     }
 
@@ -781,7 +775,7 @@ class MongoDBDocumentManagerTest {
         var result = entityManager.select(query).toList();
         assertSoftly(softly -> {
             softly.assertThat(result).hasSize(1);
-            softly.assertThat(result.get(0).find("name").orElseThrow().get(String.class)).isEqualTo("Poliana");
+            softly.assertThat(result.getFirst().find("name").orElseThrow().get(String.class)).isEqualTo("Poliana");
         });
     }
 
@@ -796,7 +790,7 @@ class MongoDBDocumentManagerTest {
         var result = entityManager.select(query).toList();
         assertSoftly(softly -> {
             softly.assertThat(result).hasSize(1);
-            softly.assertThat(result.get(0).find("name").orElseThrow().get(String.class)).isEqualTo("Poliana");
+            softly.assertThat(result.getFirst().find("name").orElseThrow().get(String.class)).isEqualTo("Poliana");
         });
     }
 
